till moving numbers

--- a/index.html
+++ b/index.html
@@ -347,9 +347,48 @@
         <div class = "rit-left">
             <p>Your morning ritual, made to awaken your mind</p>
             <p>Transform your morning with a simple, potent, and powerful ritual that fuels your day</p>
+            <div>
+                <div class="win">
+                    <div class = "number">1</div>
+                    <div class = 'text'>
+                        <div class = "header">Prepare your Favourite Drink</div>
+                        <div class = "sub_text">Start your morning with your favourite beverage, wether it's nutrient packed smoothie or a warm cup of tea.</div>
+                    </div>
+                </div>
+                <div class="win">
+                    <div class = "number">2</div>
+                    <div class = 'text'>
+                        <div class = "header">Take a scoop</div>
+                        <div class = "sub_text">Simply add one potent scoop mixed with x10 potency to boost energy, enhance clarity and support wellness all day.</div>
+                    </div>
+                </div>
+                <div class="win">
+                    <div class = "number">3</div>
+                    <div class = 'text'>
+                        <div class = "header">Customize and mix</div>
+                        <div class = "sub_text">Personalize your morning drink. Stir well for a perfectly blended nutrient-rich beverage that awakens your mind and prepares you for the day.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="shop-button">
+                <button class="try-button">
+                       See how people are using Alcami        
+                    <img src="/assets/right-arrow.png" alt="Arrow">   
+                </button>
+            </div>
+        </div>
+        <div class = "rit-right">
+            <img src="/assets/video-cards/1.png" alt="ritual" style="width: 69%; height: auto;">
+        </div>
+    </div>
+
+
+    <!-- mushroom section  -->
+    <div class="mushroom-section">
+        <img src="/assets/mushrooms.png" alt="mushrooms" class="mushrooms">
+        <div class="perc">
             
         </div>
-        <div class = "rit-right"></div>
     </div>
 </body>
 </html>
