trying moving numbers

--- a/index.html
+++ b/index.html
@@ -384,11 +384,26 @@
 
 
     <!-- mushroom section  -->
+    
     <div class="mushroom-section">
         <img src="/assets/mushrooms.png" alt="mushrooms" class="mushrooms">
         <div class="perc">
-            
+            <div class="data">
+                <div class="moving-number" data-target="84">0</div>
+                <div class="moving-data">Reported increased energy throughout their day</div>
+            </div>
+            <div class="data">
+                <div class="moving-number" data-target="78">0</div>
+                <div class="moving-data">Reported feeling more focused</div>
+            </div>
+            <div class="data">
+                <div class="moving-number" data-target="89">0</div>
+                <div class="moving-data">Reported a sense of calmness and steady mood</div>
+            </div>
+            <div class="data">
+                <div class="moving-number" data-target="90">0</div>
+                <div class="moving-data">Reported feeling an overall increased wellness in their gut, skin, hair and physical health</div>
+            </div>
         </div>
-    </div>
 </body>
 </html>
