--- a/index.html
+++ b/index.html
@@ -555,8 +555,13 @@
                     <label for="q5">Are you using fruiting bodies for your mushrooms?                                         +</label>
                     <div class="content">Yes, we use 100% fruiting bodies for maximum benefits.</div>
                 </div>
-            
+                <div class="faq-container">
+                    <button class="try-faq">
+                        See All FAQ's     <img src="/assets/right-arrow.png" alt="Arrow">
+                    </button>
+                </div>
         </div>
+
      </div>
 
 </body>
