--- a/index.html
+++ b/index.html
@@ -564,5 +564,36 @@
 
      </div>
 
+
+     <!-- give email section -->
+     <div style="position: relative; display: inline-block; width: calc(100% - 128px); margin: 0 64px;">
+        <img src="/assets/cogffee-mug.png" 
+             alt="coffee" 
+             class="coffee-mug" 
+             style="width: 100%; height: 800px; border-radius: 20px; object-fit: cover; filter: brightness(50%);">
+        
+        <div class="mug-text">
+            <div class="mug-firsttext">
+                Sign up and receive up to 15% off
+                <br>
+                on your first order
+            </div>
+            <div class="mug-subtext">
+                Get weekly recipes, insights, and freebies when you sign up for our newsletter. 
+            </div>
+            <input type="text" id="emailInput" class="glow-input" placeholder="">
+            <div class="button-container">
+                <button class="white-btn" onclick="subscribe()">
+                    Subscribe          <img src="/assets/right-arrow.png" alt="Arrow">
+                </button>
+            </div>
+        </div>
+    </div>
+    
 </body>
+<footer >
+    <div >jn</div>
+</footer>
 </html>
+
+
