--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <div class="bottom-section">
             <p class="quote">         Incredible Taste And Effects You Can Feel         </p>
         </div>
+        <div class="haha"></div>
 
 
         <!-- Second section -->
@@ -358,19 +359,23 @@
         <img src="/assets/mushrooms.png" alt="mushrooms" class="mushrooms">
         <div class="perc">
             <div class="data">
-                <div class="moving-number" data-target="84">0</div>
+                <span class="leline">
+                <div class="moving-number" data-target="84">0</div><div class="qq">%</div></span>
                 <div class="moving-data">Reported increased energy throughout their day</div>
             </div>
             <div class="data">
-                <div class="moving-number" data-target="78">0</div>
+                <span class="leline">
+                <div class="moving-number" data-target="78">0</div><div class="qq">%</div></span>
                 <div class="moving-data">Reported feeling more focused</div>
             </div>
             <div class="data">
-                <div class="moving-number" data-target="89">0</div>
+                <span class="leline">
+                <div class="moving-number" data-target="89">0</div><div class="qq">%</div></span>
                 <div class="moving-data">Reported a sense of calmness and steady mood</div>
             </div>
             <div class="data">
-                <div class="moving-number" data-target="90">0</div>
+                <span class="leline">
+                <div class="moving-number" data-target="90">0</div><div class="qq">%</div></span>
                 <div class="moving-data">Reported feeling an overall increased wellness in their gut, skin, hair and physical health</div>
             </div>
         </div>
