--- a/index.html
+++ b/index.html
@@ -509,11 +509,150 @@
 
     <!-- feedback section  -->
     <div class="feedback-cards">
+        <script src="/js/carousel.js"></script>
         <div class="say">
             What our customers are saying
         </div>
         <div class="people">
             Real people, real reviews.
+        </div>
+        <div class="center">
+            <div class="wrapper">
+            <div class="inner">
+            <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
+                <div class="contentt">
+                <h1>Product Design</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+            <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
+                <div class="contentt">
+                <h1>Custom Website</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+            <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+            <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+            <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+            <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+                    <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+                    <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+                    <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+            </div>
+            <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+                    <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+                    <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+            <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+                    <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+                    <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+            <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+                    <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+                    <div class="cardd">
+                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
+                <div class="contentt">
+                <h1>Digital Marketing</h1>
+                <h3>UI/UX, Design</h3>
+                </div>
+            </div>
+        </div>
+        
+        <div class="map">
+            <button class="activee first"></button>
+            <button class="second"></button>
+            <button class="third"></button>
+        </div>
         </div>
     </div>
 
