--- a/index.html
+++ b/index.html
@@ -518,132 +518,52 @@
         </div>
         <div class="center">
             <div class="wrapper">
-            <div class="inner">
-            <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
-                <div class="contentt">
-                <h1>Product Design</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
-            <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
-                <div class="contentt">
-                <h1>Custom Website</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
-            <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
-            <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
-            <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
-            <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
+                <div class="inner">
                     <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
+                        <div class="contentt">
+                            <img src="/assets/the-cardd.png"width="100%">
+                        </div>
+                    </div>
                     <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
+                        <div class="contentt">
+                            <img src="/assets/the-cardd.png"width="100%">
+                        </div>
+                    </div>
                     <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
-            </div>
-            <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
+                        <div class="contentt">
+                            <img src="/assets/the-cardd.png"width="100%">
+                        </div>
+                    </div>
                     <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
+                        <div class="contentt">
+                            <img src="/assets/the-cardd.png"width="100%">
+                        </div>
+                    </div>
                     <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
-            <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
+                        <div class="contentt">
+                            <img src="/assets/the-cardd.png"width="100%">
+                        </div>
+                    </div>
                     <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
+                        <div class="contentt">
+                            <img src="/assets/the-cardd.png"width="100%">
+                        </div>
+                    </div>
                     <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
-            <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/1.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
+                        <div class="contentt">
+                            <img src="/assets/the-cardd.png"width="100%">
+                        </div>
+                    </div>
                     <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/2.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
-                </div>
-            </div>
-                    <div class="cardd">
-                <img src="https://colorlib.com/preview/theme/seogo/img/case_study/3.png">
-                <div class="contentt">
-                <h1>Digital Marketing</h1>
-                <h3>UI/UX, Design</h3>
+                        <div class="contentt">
+                            <img src="/assets/the-cardd.png"width="100%">
+                        </div>
+                    </div>
+                    <!-- <div class="cardd">
+                        <div class="contentt">
+                            <img src="/assets/the-cardd.png"width="100%">
+                        </div>
+                    </div> -->
                 </div>
             </div>
         </div>
