photo slider done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/styles2.css">
     <link rel="stylesheet" href="/css/carousel.css">
+    <script src="/js/image-switcher.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -178,8 +179,26 @@
             <!-- product photo section -->
             <div class="left-flex">
                 <div>
-                    <img src="/assets/photos/1.png" alt="bags" class="timg">
-                    <img src="/assets/photos/1slider.png" alt="bags" class="kk">
+                    <div class="timg-container">
+                <img src="/assets/photos/1.png" alt="bags" class="timg">
+                <button class="slider-nav prev" aria-label="Previous slide"></button>
+                <button class="slider-nav next" aria-label="Next slide"></button>
+                <div class="slider-dots"></div>
+
+                
+            </div>
+            <div class="page1">
+                <img src="/assets/photos/8_6_11zon.png" alt="bags" class="gimg">
+                <img src="/assets/photos/7_5_11zon.png" alt="bags" class="gimg">
+                <img src="/assets/photos/8_6_11zon.png" alt="bags" class="gimg">
+                <img src="/assets/photos/9_7_11zon.png" alt="bags" class="gimg">
+            </div>
+            <div class="page1">
+                <img src="/assets/photos/2_1_11zon.png" alt="bags" class="gimg">
+                <img src="/assets/photos/3_2_11zon.png" alt="bags" class="gimg">
+                <img src="/assets/photos/4_3_11zon.png" alt="bags" class="gimg">
+                <img src="/assets/photos/5_4_11zon.png" alt="bags" class="gimg">
+            </div>
                 </div>
             </div>
             
