mostly phone optimised

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/styles2.css">
     <link rel="stylesheet" href="/css/carousel.css">
+
+    <link rel="stylesheet" href="/styles3.css">
+
+    <link rel="stylesheet" href="/styles4.css">
+    <link rel="stylesheet" href="/styles5.css">
     <script src="/js/image-switcher.js"></script>
 </head>
 <body>
@@ -621,27 +626,27 @@
             
                 <div class="accordion">
                     <input type="checkbox" id="q1">
-                    <label for="q1">If I subscribe can I cancel anytime?                                                                +</label>
+                    <label for="q1">If I subscribe can I cancel anytime?                                                                <div class="plusss">+</div></label>
                     <div class="content">Yes, you can cancel your subscription at any time.</div>
                 </div>
                 <div class="accordion">
                     <input type="checkbox" id="q2">
-                    <label for="q2">Can I take this at night?                                                                                   +</label>
+                    <label for="q2">Can I take this at night?                                                                                   <div class="plusss">+</div></label>
                     <div class="content">Yes, it is safe to take at night.</div>
                 </div>
                 <div class="accordion">
                     <input type="checkbox" id="q3">
-                    <label for="q3">Where are your ingredients sourced from?                                                      +</label>
+                    <label for="q3">Where are your ingredients sourced from?                                                      <div class="plusss">+</div></label>
                     <div class="content">Our ingredients are ethically sourced from organic farms.</div>
                 </div>
                 <div class="accordion">
                     <input type="checkbox" id="q4">
-                    <label for="q4">Will this get me high?                                                                                       +</label>
+                    <label for="q4">Will this get me high?                                                                                     <div class="plusss">+</div></label>
                     <div class="content">No, this product does not contain any psychoactive substances.</div>
                 </div>
                 <div class="accordion">
                     <input type="checkbox" id="q5">
-                    <label for="q5">Are you using fruiting bodies for your mushrooms?                                         +</label>
+                    <label for="q5">Are you using fruiting bodies for your mushrooms?                                         <div class="plusss">+</div></label>
                     <div class="content">Yes, we use 100% fruiting bodies for maximum benefits.</div>
                 </div>
                 <div class="faq-container">
