--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <div class="logo">
             <img src="/assets/logo.png" alt="Logo">
         </div>
+        <img src="/assets/hamburger.png" class="hamburger" />
+
         <div class="nav-menu">
             <a href="#">Home</a>
             <div class="dropdown">
                 <a href="#">Shop ▾</a>
                 <div class="dropdown-content">
-                    <a href="#">Category 1</a>
-                    <a href="#">Category 2</a>
-                    <a href="#">Category 3</a>
+                    
                 </div>
             </div>
             <a href="#">Elements</a>
