--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="/styles4.css">
     <link rel="stylesheet" href="/styles5.css">
     <script src="/js/image-switcher.js"></script>
+    <script src="/js/flavor-image-switcher.js"></script>
 </head>
 <body>
     <nav class="navbar">
+        <div class="margin">
         <div class="top-banner">
             GET 25% OFF YOUR FIRST MONTH. FREE SHIPPING ON U.S ORDERS
         </div>
@@ -52,6 +54,7 @@
         <div class="search-box">
             <input type="text" placeholder="Search for products">
         </div>
+    </div>
     </nav>
     <script src="/script.js"></script>
 
