--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
             <div class="mug-subtext">
                 Get weekly recipes, insights, and freebies when you sign up for our newsletter. 
             </div>
-            <input type="text" id="emailInput" class="glow-input" placeholder="">
+            <input type="email" id="emailInput" class="glow-input" placeholder="">
             <div class="button-container">
                 <button class="white-btn" onclick="subscribe()">
                     Subscribe          <img src="/assets/right-arrow.png" alt="Arrow">
@@ -730,7 +730,7 @@
         <div class="footer-right">
             <p>Join our newsletter to stay up to date on features and releases.</p>
             <div class="subi">
-                <input type="text" id="emailInput2" class="normal-input" placeholder=""/>
+                <input type="email" id="emailInput2" class="normal-input" placeholder=""/>
                 <button class="email-btn" onclick="subscribe2()">
                     Subscribe
                 </button>
