--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cube Project</title>
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/styles2.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles2.css">
     <link rel="stylesheet" href="/css/carousel.css">
 
-    <link rel="stylesheet" href="/styles3.css">
+    <link rel="stylesheet" href="/css/styles3.css">
 
-    <link rel="stylesheet" href="/styles4.css">
-    <link rel="stylesheet" href="/styles5.css">
+    <link rel="stylesheet" href="/css/styles4.css">
+    <link rel="stylesheet" href="/css/styles5.css">
     <script src="/js/image-switcher.js"></script>
     <script src="/js/flavor-image-switcher.js"></script>
 </head>
@@ -58,7 +58,7 @@
         </div>
     </div>
     </nav>
-    <script src="/script.js"></script>
+    <script src="/js/script.js"></script>
 
     <!-- slide 1  -->
     <!-- Main container with left and right sections -->
