--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             </div>
                         </label>
                     </div>
-                    <button class="add-to-cart" id="addToCartBtn">
+                    <button class="add-to-cart" id="addToCartBtn" href="">
                         Add to Cart →
                         <span class="url-tooltip" id="urlTooltip"></span>
                     </button>
